# data-engineering

./: .env.example  .gitignore  .prettierignore  Brewfile  Brewfile.lock.json  Makefile  Pipfile  README.md  conf.yaml  coordsmaker.py  doload.sh  download.sh  meta2yaml.py  models.yaml  package-lock.json  package.json  pfimport.py  pyproject.toml  requirements.txt  temp.sql  test.py  tsconfig.json
conf/: rclone.conf
data/: README.md
geocode/: geocode.ts  index.ts  mapbox.ts  package-lock.json  package.json  types.ts
geojson/: .gitignore  Dockerfile  Makefile  app.py
infra/services/: Pulumi.development.yaml  Pulumi.production.yaml  Pulumi.yaml  index.ts  package.json  tsconfig.json
mapbox-tileset-validation/: .gitignore  README.md  package.json
mapbox-tilesets/: README.md  package.json  tsconfig.json
mapbox-tilesets/tests/: index.ts  main.ts  mbxClient.d.ts
mapbox-tilesets/tiles/: probablefutures.40601-east-3-4-3.mvt  probablefutures.40601-east-5-15-14.mvt
netcdf/pfpro-loader/: conf.yaml  pfimport.py
netcdfs/import/: .dockerignore  .gitignore  Dockerfile  README.md  conf.yaml  helpers.py  lambdaHandler.py  lambda_function.py  load-stats.py  pfimport-all-stats.py  pfimport-new.py  pfimport-update.py  pfimport.py  pfupdate.py  pyproject.toml  requirements.txt
postgres/loaders/: pf_datasets.load  (+2 more)
util/: probable_futures_schema.sql  temp.sql
vector-tiles/: .env.example  configs.ts  createTilesets.ts  database.ts  fetchMapStyles.ts  generateStyles.ts  lambdaHandler.mjs  package-lock.json  package.json  tsconfig.json  types.ts  updateTilesets.ts  utils.ts
(+36 files in other folders)
