[tool.poetry]
name = "pfpro-loader"
version = "0.1.0"
description = "CDF import and export to Probable Futures Postgres/PostGIS schema."
authors = ["Paul Ford <ford@ftrain.com>"]
license = "Private"

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^0.19.0"
psycopg2-binary = "^2.9.1"
click = "^8.0.1"
rich = "^10.6.0"
netCDF4 = "^1.5.7"
oyaml = "^1.0"
iteration-utilities = "^0.11.0"
SQLAlchemy = "^1.4.22"
GeoAlchemy2 = "^0.9.2"
sqlalchemy-citext = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
